# hwpb

./: .gitignore  Cargo.toml  README.md  Rocket.toml.example  example.sql  rust-toolchain
doc/: DEPLOY.md  DEVELOP.md
doc/examples/: Rocket.toml  hwpb.nginx  hwpb.pam  hwpb.service
migrations/: example.sql
migrations/20170417171449_initial_schema/: down.sql  up.sql
migrations/20170509134523_timestamp/: down.sql  up.sql
migrations/20170515154150_elaborations/: down.sql  up.sql
migrations/20170615230606_more_groups_per_student/: down.sql  up.sql
migrations/20171105195755_introduce_generic_pkeys/: down.sql  up.sql
migrations/20171108223000_multiple_years/: down.sql  up.sql
migrations/20171111181854_add_audit_log/: down.sql  up.sql
migrations/20171129220958_year_settings/: down.sql  up.sql
migrations/20171207022955_drop_event_id/: down.sql  up.sql
migrations/20180107231725_store_student_username/: down.sql  up.sql
migrations/20180108192044_tutors/: down.sql  up.sql
migrations/20180413191421_add_student_instruction/: down.sql  up.sql
migrations/20180710210514_ip_whitelist/: down.sql  up.sql
migrations/20180717202814_split_names/: down.sql  up.sql
migrations/20180822202935_add_missing_year_references/: down.sql  up.sql
src/: build.rs  errors.rs  main.rs
src/db/: inet.rs  mod.rs  models.rs  schema.rs
src/user/: mod.rs
src/web/: analysis.rs  api.rs  audit.rs  mod.rs  models.rs  push.rs  session.rs
templates/: admin-audit.html.tera  admin-base.html.tera  admin-events.html.tera  admin-experiments.html.tera  admin-students.html.tera  admin-tutors.html.tera  analysis-text.txt.tera  analysis.html.tera  audit.html.tera  base.html.tera  event.html.tera  group.html.tera  index.html.tera  login.html.tera  macros.html.tera  manifest.json  overview.html.tera
templates/static/: admin-audit.css  admin-audit.js  admin-events.css  admin-events.js  (+21 more)
(+7 files in other folders)
