[package]
name = "hwpb"
version = "0.3.2"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]

build = "src/build.rs"

[dependencies]
bit-vec = "0.4"
chrono = "0.4"
diesel = { version = "0.99", features = ["postgres", "chrono"] }
diesel_migrations = { version = "0.99", features = ["postgres"] }
error-chain = "0.11"
itertools = "0.7"
pam-auth = "0.5.2"
r2d2 = "0.8"
r2d2-diesel = "0.99"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3", features = [ "json", "tera_templates" ] }
serde = "1.0"
serde_derive = "1.0"
