[package]
name = "hwpb"
version = "1.0.0-beta.2"
edition = "2018"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]

build = "src/build.rs"

[dependencies]
bit-vec = "0.5"
chrono = "0.4"
csv = "1.0"
diesel = { version = "1.4", features = ["postgres", "chrono", "network-address", "r2d2"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
error-chain = "0.12"
hyper-sse = "0.1.0"
itertools = "0.8"
lazy_static = "1"
pam = "0.7.0"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = [ "json", "tera_templates" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
